<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CoordinatorStyle"
    tools:context="com.example.laurentiudragunoi.music.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/song_bar"
        style="@style/MatchWrapStyle">

        <android.support.design.widget.CollapsingToolbarLayout style="@style/CollapsingToolbarStyle">

            <LinearLayout
                style="@style/MatchWrapStyle"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    style="@style/TextLightColor"
                    android:layout_gravity="center"
                    android:text="@string/song_name" />

                <TextView
                    style="@style/TextLightColor"
                    android:layout_gravity="center"
                    android:text="@string/artist_name" />

                <LinearLayout
                    style="@style/WrapStyle"
                    android:layout_gravity="center_horizontal">

                    <android.support.design.widget.FloatingActionButton
                        style="@style/FloatingToolbarStyle"
                        android:src="@drawable/previous" />

                    <android.support.design.widget.FloatingActionButton
                        style="@style/FloatingToolbarStyle"
                        android:src="@drawable/play" />

                    <android.support.design.widget.FloatingActionButton
                        style="@style/FloatingToolbarStyle"
                        android:src="@drawable/next" />
                </LinearLayout>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        style="@style/MatchStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/MatchStyle"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/map"
                style="@style/MatchWrapStyle"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/MatchWrapStyle"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/library"
                        style="@style/CardViewMainStyle"
                        android:layout_weight="1">

                        <RelativeLayout style="@style/WrapStyle">

                            <TextView
                                android:id="@+id/text1"
                                style="@style/TextDarkTitle"
                                android:text="@string/library_name" />

                            <TextView
                                style="@style/TextDarkColor"
                                android:layout_below="@id/text1"
                                android:text="@string/library_explination" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/artists"
                        style="@style/CardViewMainStyle"
                        android:layout_weight="1">

                        <RelativeLayout style="@style/WrapStyle">

                            <TextView
                                android:id="@+id/text3"
                                style="@style/TextDarkTitle"
                                android:text="@string/artists_name" />

                            <TextView
                                style="@style/TextDarkColor"
                                android:layout_below="@id/text3"
                                android:text="@string/artists_explanation" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    style="@style/MatchWrapStyle"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/now_playing"
                        style="@style/CardViewMainStyle"
                        android:layout_weight="1">

                        <RelativeLayout style="@style/WrapStyle">

                            <TextView
                                android:id="@+id/text5"
                                style="@style/TextDarkTitle"
                                android:text="@string/now_play_name" />

                            <TextView
                                style="@style/TextDarkColor"
                                android:layout_below="@id/text5"
                                android:text="@string/now_playing_explanation" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/playlist"
                        style="@style/CardViewMainStyle"
                        android:layout_weight="1">

                        <RelativeLayout style="@style/WrapStyle">

                            <TextView
                                android:id="@+id/text7"
                                style="@style/TextDarkTitle"
                                android:text="@string/playlist_name" />

                            <TextView
                                style="@style/TextDarkColor"
                                android:layout_below="@id/text7"
                                android:text="@string/playlist_explanation" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/TextExplanations"
                android:text="@string/home_page_explanation" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        style="@style/SearchButtonStyle"
        app:layout_anchor="@id/song_bar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>


